# reliability-in-focus-eye-tracking

./: LICENSE  README.md  config.json  pyproject.toml
eye-tracking-analysis/dataset/: utils.py
eye-tracking-analysis/eye_tracking/: array_handling.py  data_preprocessing.py  feature_calculations.py  io_utils.py  validity_utils.py
trust_in_prosthesis_analysis/dataset/: trust_dataset.py
trust_in_prosthesis_analysis/eye_tracking/: features.py
